--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
   schedule:
 # run every 10 a.m., which is UTC 2 a.m + 8
-    - cron:  '5 8 * * *'
+    - cron:  '0 1 * * *'
   workflow_dispatch:
 
 jobs:
@@ -21,4 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: run
-        run: STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
+        env:
+          STD_ID: ${{ secrets.STD_ID }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: python3 main.py
