--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -26,4 +26,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
-        run: STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
+        env: # Set the secret as an input
+          STD_ID: ${{ secrets.STD_ID }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run:   python3 main.py
