--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install easyocr pillow numpy
+          pip install easyocr pillow numpy ddddocr
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
