--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron:  '6 0 * * *'
+    - cron:  '0 2 * * *'
   workflow_dispatch:
 
 jobs:
@@ -22,11 +22,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install opencv-python==4.5.4.60
           pip install pillow numpy ddddocr
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
       - name: run
-        env: # Set the secret as an input
-          STD_ID: ${{ secrets.STD_ID }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-        run:   python3 main.py
+        run: STD_ID=${{ secrets.STD_ID }} PASSWORD=${{ secrets.PASSWORD }} python3 main.py
